pkg/lang/testdata/ub/config/invalid/input-call-in-list.ub
inputs: { x: [1, pick()] }
